# hcls-agent-skills

./: .gitignore  CONTRIBUTING.md  CUSTOMIZING.md  QUALITY_CHECKLIST.md  README.md  SKILL_DESIGN_GUIDE.md  pyproject.toml
.github/scripts/: merge_traffic.py
.github/workflows/: collect-traffic.yml
demo/: index.html  package-lock.json  package.json  server.js  vite.config.js
demo/src/: App.jsx  index.css
demo/src/components/: ChatPanel.jsx  Header.jsx  MessageBubble.jsx  SkillBadge.jsx  SubagentCard.jsx  TaskListCard.jsx  ToolCard.jsx  TypingIndicator.jsx  markdown.js
eval/: HARNESS_EFFECTS.md  README.md  TECHNICAL_REPORT.md  backfill_metadata.py  build_review.py  execute.py  generate_prompts.py  preflight.py  report.py  run.py  test_executor.py
eval/prompts/cross/: cob-denial-workup-01.yaml  cob-denial-workup-02.yaml  cob-denial-workup-03.yaml  drug-discovery-structural-11.yaml  drug-discovery-structural-12.yaml  drug-discovery-structural-13.yaml  drug-discovery-structural-14.yaml  drug-discovery-structural-15.yaml  drug-discovery-structural-16.yaml  drug-discovery-structural-17.yaml  drug-discovery-structural-18.yaml  drug-discovery-structural-19.yaml  drug-discovery-structural-20.yaml  drug-discovery-structural-21.yaml  (+49 more)
examples/: drug-discovery-chatbot-demo.md  healthcare-ops-chatbot-demo.md
skills/coordination-of-benefits/: README.md  SKILL.md
skills/medical-device-software-compliance/: SKILL.md
skills/provider-denial-workup/: README.md  SKILL.md
skills/provider-underpayment-explainer/: SKILL.md
tests/: validate_skill.py
(+881 files in other folders)
