[project]
name = "hcls-skills-eval"
version = "0.1.0"
description = "Evaluation suite for HCLS Agent Skills"
requires-python = ">=3.11"
license = "MIT-0"
dependencies = [
    "strands-agents>=1.44.0,<2.0",
    "boto3>=1.35",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["rich"]

[project.scripts]
hcls-eval = "eval.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

[dependency-groups]
dev = ["rich"]
